build: install google cloud pubsub dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,12 @@
 name = "pubsub-emulator"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Victor Martinez <vcrmartinez@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-
+google-cloud-pubsub = "^2.18.4"
 
 [build-system]
 requires = ["poetry-core"]
